# velocity

./: .dockerignore  .gitignore  Dockerfile  PKGBUILD  index.html  package.json  tsconfig.json  velocity.desktop  vite.config.ts
src/: App.tsx  listners.ts  main.tsx  velocity  velocity.desktop
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cancel_transfer.rs  connect.rs  connect_client.rs  connect_server.rs  mod.rs  receive.rs  scan_devices.rs  send.rs
src-tauri/src/commands/helpers/: find_device_client.rs  find_device_receiver.rs  find_device_sender.rs  mod.rs  receiver_connect.rs  send_file.rs
src/pages/: Home.tsx  Receiver.tsx  Sender.tsx  Transfer.tsx
src/stores/: types.ts  useStore.ts
